--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
   <!-- Loading -->
-  <!-- <div class="loading">
+  <div class="loading">
     <div class="box_logo">
       <span class="loader"></span>
     </div>
-  </div> -->
+  </div>
 
   <!-- Floating Button -->
 	<a class="floating-button" target="_blank">
